# myousync

./: .envrc.old  .gitignore  Cargo.toml  default.nix  default2.nix  flake.nix  myousync.code-workspace  myousync.nix  pack.ps1  package-lock.json  shell.nix
.github/workflows/: rust.yml
multitag/: .gitignore  Cargo.toml  README.md
multitag/examples/: edit_tag.rs  edit_tag_vec.rs  read_tag.rs
multitag/src/: data.rs  lib.rs
multitag/testin/: empty.m4a  empty.opus
myousync/: .gitignore  Cargo.toml
myousync/src/: auth.rs  brainz.rs  dbdata.rs  jellyfin.rs  main.rs  minicli.rs  musicfiles.rs  net.rs  yt_api.rs  ytdlp.rs
myousync/src/dbdata/: mod.rs  models.rs  sql_system_time.rs
myousync/src/util/: limiter.rs  mod.rs  time.rs
nix/: default-ui.nix  myousync.nix  overlay.nix  shell.nix
nix/backend/: default.nix
nix/frontend/: default.nix
src/: dbdata.rs  main.rs  musicfiles.rs  net.rs  yt_api.rs
ui/: package-lock.json  package.json  rsbuild.config.ts  tailwind.config.js
ui/src/: app.css  index.html  index.ts
ui/src/lib/: AuthForm.svelte  BMS.svelte  BRes.svelte  Video.svelte  auth.ts  defs.ts  index.ts
ui/src/routes/: +page.svelte  App.svelte
