[package]
name = "multitag"
version = "0.4.2"
edition = "2021"
description = "A crate for reading and writing music metadata in a variety of formats"
license = "MIT"
repository = "https://github.com/karx1/multitag"
homepage = "https://karx.xyz/projects/multitag"
readme = "README.md"

[dependencies]
id3 = "1.14.0"
thiserror = "2"
mp4ameta = "0.13.0"
metaflac = "0.2.8"
opusmeta = { git = "https://github.com/Splamy/opusmeta.git" }
oggmeta = "1.2.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
