[package]
name = "myousync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4.38"
colog = "1.3.0"
duration-str = "0.13.0"
glob = "0.3.1"
id3 = "*"
jsonwebtoken = "9.3.1"
log = "0.4.26"
multitag = { path = "../multitag" }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = { version = "0.33", features = ["bundled"] }
sanitise-file-name = "1.0.0"
serde = {version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_rusqlite = "0.37.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
urlencoding = "2.1.3"
walkdir = "2.5.0"
